--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL='https://server.dev.ziara.africa'
+VUE_APP_BASE_URL_LOCAL='http://localhost:4000'
+VUE_APP_BASE_URL_LIVE= 'https://jellyfish-app-b6jxu.ondigitalocean.app'
